syntax = "proto3";

option go_package = "./core";

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  uint64 phone = 4;
  float height = 5;
  bool Married = 6;
}

message SingleUserRequest {
  int32 id = 1;
}

message UsersRequest {
  repeated int32 id = 1;
}

message Response {
  repeated User user = 1;
}

service UserGetter {
  rpc GetUser (SingleUserRequest) returns (Response);
  rpc GetUsers (UsersRequest) returns (Response);
}
